--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,15 @@
 spring:
-    application:
-            name: Spring Boot Excel API
-debug: true
+  application:
+    name: Spring Boot Excel API
+  datasource:
+    driverClassName: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://localhost:3306/db_test
+    username: admin
+    password: password
+    timeBetweenEvictionRunsMillis: 1000
+    testWhileIdle: true
+    validationQuery: SELECT 1
+
+  jpa:
+    hibernate: 
+      ddl-auto: none
